--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "PORT=5001 react-scripts start",
+    "start": "json-server --watch characters.json -p 5001 & open http://localhost:5001/characters & PORT=5002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
